--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Oddin Recipes</h1>
-    <a href "recipes/quesadilla.html">Quesadilla</a>
+    <h1>Odin Recipes</h1>
+    <ul>
+    <li><a href="./recipes/quesadilla.html">Quesadilla</a></li>
+    <li><a href="./recipes/soup.html"></a>Soup</li>
+    <li><a href="./recipes/chicken.html"></a>Chicken</li>
+    </ul>
 </body>
 </html>
