--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="./recipes/quesadilla.html">Quesadilla</a></li>
-    <li><a href="./recipes/soup.html"></a>Soup</li>
-    <li><a href="./recipes/chicken.html"></a>Chicken</li>
+    <li><a href="./recipes/soup.html">Soup</a></li>
+    <li><a href="./recipes/chicken.html">Chicken</a></li>
     </ul>
 </body>
 </html>
